--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MultimedijiIksOks"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
+            android:exported="false"
+            android:configChanges="orientation|screenSize"
+            />
+        <activity
+            android:name=".UvodnaAktivnost"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
